--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,3 @@
 a:link { color: blue; }
 a:visited { color: blueviolet; }
-a:hover:not([name]) { color: orange; }
+a:not([name]):hover { color: orange; }
