--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,32 @@
-a:link { color: blue; }
-a:visited { color: blueviolet; }
-a:not([name]):hover { color: orange; }
+a:link{
+	color: blue;
+}
+a:visited{
+	color: blueviolet;
+}
+a:not([name]):hover{
+	color: orange;
+}
 /* :not([name])と:hoverを逆転させるとChrome上では望み通りに適応されない */
+.beamer{
+	position:relative;
+	width:600;
+	height:450;
+}
+@media screen and ( max-width:600px )
+{
+	.beamer{
+		position:relative;
+		width:100%;
+		height:0;
+		padding-top:75%;
+	}
+}
+.beamer iframe{
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
