--- a/mystyle.css
+++ b/mystyle.css
@@ -13,6 +13,11 @@ a:not([name]):hover{
 	width:600;
 	height:450;
 }
+.jsarticle{
+	position:relative;
+	width:600;
+	height:840;
+}
 @media screen and ( max-width:600px )
 {
 	.beamer{
@@ -21,12 +26,18 @@ a:not([name]):hover{
 		height:0;
 		padding-top:75%;
 	}
+	.jsarticle{
+		position:relative;
+		width:100%;
+		height:0;
+		padding-top:140%;
+	
+	}
 }
-.beamer iframe{
+.beamer iframe, .jsarticle iframe{
 	position:absolute;
 	top:0;
 	left:0;
 	width:100%;
 	height:100%;
 }
-
