--- a/mystyle.css
+++ b/mystyle.css
@@ -8,6 +8,16 @@ a:not([name]):hover{
 	color: orange;
 }
 /* :not([name])と:hoverを逆転させるとChrome上では望み通りに適応されない */
+header{
+	position:fixed;
+	top:0;
+	background:white;
+	width:100%;
+	z-index:0;
+}
+.main{
+	padding-top:3em;
+}
 .foot_note p{
 	font-size:0.8em;
 }
@@ -15,11 +25,13 @@ a:not([name]):hover{
 	position:relative;
 	width:600;
 	height:450;
+	z-index:-1;
 }
 .jsarticle{
 	position:relative;
 	width:600;
 	height:840;
+	z-index:-1;
 }
 @media screen and ( max-width:600px )
 {
@@ -28,12 +40,14 @@ a:not([name]):hover{
 		width:100%;
 		height:0;
 		padding-top:75%;
+		z-index:-1;
 	}
 	.jsarticle{
 		position:relative;
 		width:100%;
 		height:0;
 		padding-top:140%;
+		z-index:-1;
 	
 	}
 }
